@startuml

class User {
  -string email
  -string password
  -int role
  -int idUser
  
  +User(string email, string password, int idUser, int role = 1)
  
  +getTouite() : TouiteList
  +getFollower() : list<User>
  +getFollowing() : list<User>
  +getFollowedTag() : list<Tag>
  
  +followUser(User target)
  +followTag(Tag target)
  +unFollowUser(User target)
  +unFollowTag(Tag target)
}

class Touite {
  -User author
  -String text
  -String srcImage
  -int datePublication
  -int score
  -List<Tag> tags
  
  +Touite(string author, string text, int datePublication, string srcImage = "")
  
  +{static}static findTag(string text) : List<Tag>
  +{static}static getAllTouite() : List<Touite>
  +{static}static publishTouite(User author, string text, string srcImage = "") : Touite
  
  +evaluateTouite(User user, bool evalPositive)
  +displayTouiteSimple() : string
  +displayTouiteDetail() : string
  +deleteTouite(User user)
}

Touite "*" <-- "1" User : author
Touite "*" <-- "*" Tag : tags

class Tag {
  -String name
  -int nbUsage
  -int id
  -String description
  
  +Tag(string name, int id, description = "")
  
  +{static} insertTagIntoDB(string name, string description) : Tag
  
  +getTouiteListFromTag() : TouiteList
  +updateNbUsage()
}

class TouiteList {
  -List<Touite> touites
  -int nbTouitePerPage
  
  TouiteList(list<array> touites = [], nbTouitePerPage = 10)
  
  +addTouite(Touite touite)
  +removeTouite(Touite touite)
  
  +displayAllTouite() : string
  +displayPage(int page) : string
  +size() : int
  +getScoreMoyen() : float
}

TouiteList "*" <-- "*" Touite : touites

class Auth {
  +{static}static register(string email, string password, int role = 1) : bool
  +{static}static authenticate(string email, string password) : bool
  +{static}static checkAccessLevel(int required) : bool
  +{static}static checkPasswordStrength(string password, int minimumLength) : bool
}

class ConnexionFactory {
  +{static} PDO db
  +{static} array config
  
  +{static} setConfig(file)
  +{static} makeConnection()
}

class Action {
  +execute() : string
}

class AfficherMur extends Action{

}

@enduml